Set -XX:MaxPermSize=128m for surefire INSIGHT-4046 INSIGHT-4048