@@ -104,4 +104,14 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-XX:MaxPermSize=128m</argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
